<resources>
    <string name="app_name">大白手机管家</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SpalshActivity_versionName">版本名称1.0</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="homeActivity_Title">功能列表</string>
    <string name="homeActivity_text">欢迎下载我们的大白手机管家,我们的管家功能齐全,消耗流量少,实时监测手机防盗功能，提供贴心的服务...</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="settingActivity_title">设置中心</string>
    <string name="setting_text">自动更新设置</string>
    <string name="setting_sec">自动更新已关闭</string>
    <string name="pwd_home">设置密码</string>
    <string name="home_pwd">请输入初始化密码</string>
    <string name="home_confirm">请输入确认密码</string>
    <string name="confirmpwd">确认密码</string>
    <string name="title_activity_setup1">Setup1Activity</string>
    <string name="title_activity_setup2">Setup2Activity</string>
    <string name="title_activity_setup3">Setup3Activity</string>
    <string name="title_activity_setup4">Setup4Activity</string>
    <string name="setup_over_title">1.欢迎使用手机防盗</string>
    <string name="setup_dec">你的手机防盗卫士:</string>
    <string name="sim_biangeng">Sim卡变更报警</string>
    <string name="gps_zhuizong">GPS追踪</string>
    <string name="yuanchengshuju">远程数据销毁</string>
    <string name="yuanchengshuji">远程锁屏</string>
    <string name="nextPage">下一页</string>
    <string name="setup2_text">通过绑定Sim卡:\n下次重启手机如果发现Sim变化，就会发送报警短信</string>
    <string name="setup2_title">2.手机卡绑定</string>
    <string name="setup3_title">3.设置安全号码</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="setover_title">手机防盗</string>
    <string name="sample_device_admin_description">一键锁屏,一键激活，一键清除数据，一键卸载</string>
    <string name="sample_device_admin">超级管理员</string>
    <string name="spalshActivity_text">版本名称:</string>
    <string name="aToolActivity_Title">高级工具</string>
    <string name="query_Address_Activity_title">归属地查询</string>

    <!--********************************************************************-->
    <string-array name="style_names">
        <item>主题选择</item>
        <item>default</item>
        <item>default light</item>
        <item>default light dark</item>
        <item>red</item>
        <item>pink</item>
        <item>purple</item>
        <item>deep purple</item>
        <item>indigo</item>
        <item>blue</item>
        <item>light blue</item>
        <item>cyan</item>
        <item>teal</item>
        <item>green</item>
        <item>light green</item>
        <item>lime</item>
        <item>yellow</item>
        <item>amber</item>
        <item>orange</item>
        <item>deep orange</item>
        <item>brown</item>
        <item>grey</item>
        <item>blue grey</item>
        <item>appTheme</item>
    </string-array>
</resources>
