<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >
    <TextView
        style="@style/myTitleStyle"
        android:text="@string/setup_over_title" />
    <TextView
        style="@style/mydec"
        android:text="@string/setup_dec" >
    </TextView>
    <TextView
        style="@style/mydesAndimage"
        android:text="@string/sim_biangeng" >
    </TextView>
    <TextView
        style="@style/mydesAndimage"
        android:text="@string/gps_zhuizong" >
    </TextView>
    <TextView
        style="@style/mydesAndimage"
        android:text="@string/yuanchengshuju" >
    </TextView>
    <TextView
        style="@style/mydesAndimage"
        android:text="@string/yuanchengshuji" >
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/setup1" />
        <Button
            style="@style/nextBtn" />
    </RelativeLayout>
</LinearLayout>