<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        style="@style/myTitleStyle"
        android:background="#e00032"
        android:text="@string/pwd_home"
        android:id="@+id/textView"/>

    <EditText
        android:textColor="#e00032"
        android:password="true"
        android:id="@+id/et_dialot_set_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_pwd" />

    <EditText
        android:textColor="#e00032"
        android:password="true"
        android:id="@+id/et_dialot_setconfirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_confirm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_dialot_setconfirm_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="确认" />

        <Button
            android:id="@+id/bt_dialot_set_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="取消" />
    </LinearLayout>

</LinearLayout>